Updates for global paper

--- a/00a-extract_training_data.ipynb
+++ b/00a-extract_training_data.ipynb
@@ -6,16 +6,16 @@
    "id": "416d11e4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:14:20.702256Z",
-     "iopub.status.busy": "2023-12-02T08:14:20.702100Z",
-     "iopub.status.idle": "2023-12-02T08:14:22.267000Z",
-     "shell.execute_reply": "2023-12-02T08:14:22.266274Z"
+     "iopub.execute_input": "2023-12-19T05:19:53.100448Z",
+     "iopub.status.busy": "2023-12-19T05:19:53.100234Z",
+     "iopub.status.idle": "2023-12-19T05:19:54.626106Z",
+     "shell.execute_reply": "2023-12-19T05:19:54.625390Z"
     },
     "papermill": {
-     "duration": 1.571774,
-     "end_time": "2023-12-02T08:14:22.268600",
+     "duration": 1.534804,
+     "end_time": "2023-12-19T05:19:54.627793",
      "exception": false,
-     "start_time": "2023-12-02T08:14:20.696826",
+     "start_time": "2023-12-19T05:19:53.092989",
      "status": "completed"
     },
     "tags": []
@@ -54,9 +54,10 @@
     "from lib.generate_unlabelled_points import generate_unlabelled_points\n",
     "from lib.misc import (\n",
     "    calculate_slab_flux,\n",
-    "    calculate_water_thickness,\n",
+    "    # calculate_water_thickness,\n",
     ")\n",
     "from lib.slab_dip import calculate_slab_dip\n",
+    "from lib.water import calculate_water_thickness\n",
     "\n",
     "# Suppress occasional joblib warnings\n",
     "%env PYTHONWARNINGS=ignore::UserWarning\n",
@@ -70,16 +71,16 @@
    "id": "24504d52",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:14:22.279434Z",
-     "iopub.status.busy": "2023-12-02T08:14:22.279268Z",
-     "iopub.status.idle": "2023-12-02T08:14:22.282645Z",
-     "shell.execute_reply": "2023-12-02T08:14:22.282040Z"
+     "iopub.execute_input": "2023-12-19T05:19:54.639672Z",
+     "iopub.status.busy": "2023-12-19T05:19:54.639164Z",
+     "iopub.status.idle": "2023-12-19T05:19:54.642474Z",
+     "shell.execute_reply": "2023-12-19T05:19:54.641908Z"
     },
     "papermill": {
-     "duration": 0.010373,
-     "end_time": "2023-12-02T08:14:22.284144",
+     "duration": 0.010772,
+     "end_time": "2023-12-19T05:19:54.644228",
      "exception": false,
-     "start_time": "2023-12-02T08:14:22.273771",
+     "start_time": "2023-12-19T05:19:54.633456",
      "status": "completed"
     },
     "tags": []
@@ -101,10 +102,10 @@
    "id": "8070f64c",
    "metadata": {
     "papermill": {
-     "duration": 0.004484,
-     "end_time": "2023-12-02T08:14:22.293246",
+     "duration": 0.00511,
+     "end_time": "2023-12-19T05:19:54.654481",
      "exception": false,
-     "start_time": "2023-12-02T08:14:22.288762",
+     "start_time": "2023-12-19T05:19:54.649371",
      "status": "completed"
     },
     "tags": []
@@ -119,16 +120,16 @@
    "id": "8cc369d6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:14:22.303465Z",
-     "iopub.status.busy": "2023-12-02T08:14:22.303311Z",
-     "iopub.status.idle": "2023-12-02T08:14:22.310078Z",
-     "shell.execute_reply": "2023-12-02T08:14:22.309472Z"
+     "iopub.execute_input": "2023-12-19T05:19:54.665158Z",
+     "iopub.status.busy": "2023-12-19T05:19:54.665004Z",
+     "iopub.status.idle": "2023-12-19T05:19:54.671523Z",
+     "shell.execute_reply": "2023-12-19T05:19:54.670889Z"
     },
     "papermill": {
-     "duration": 0.013652,
-     "end_time": "2023-12-02T08:14:22.311561",
+     "duration": 0.01354,
+     "end_time": "2023-12-19T05:19:54.672918",
      "exception": false,
-     "start_time": "2023-12-02T08:14:22.297909",
+     "start_time": "2023-12-19T05:19:54.659378",
      "status": "completed"
     },
     "tags": []
@@ -190,10 +191,10 @@
    "id": "a45746ed",
    "metadata": {
     "papermill": {
-     "duration": 0.004514,
-     "end_time": "2023-12-02T08:14:22.320678",
+     "duration": 0.004843,
+     "end_time": "2023-12-19T05:19:54.682713",
      "exception": false,
-     "start_time": "2023-12-02T08:14:22.316164",
+     "start_time": "2023-12-19T05:19:54.677870",
      "status": "completed"
     },
     "tags": []
@@ -208,16 +209,16 @@
    "id": "3e1a295a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:14:22.330717Z",
-     "iopub.status.busy": "2023-12-02T08:14:22.330566Z",
-     "iopub.status.idle": "2023-12-02T08:33:22.921674Z",
-     "shell.execute_reply": "2023-12-02T08:33:22.920870Z"
+     "iopub.execute_input": "2023-12-19T05:19:54.693290Z",
+     "iopub.status.busy": "2023-12-19T05:19:54.693135Z",
+     "iopub.status.idle": "2023-12-19T05:34:02.776479Z",
+     "shell.execute_reply": "2023-12-19T05:34:02.775505Z"
     },
     "papermill": {
-     "duration": 1140.598526,
-     "end_time": "2023-12-02T08:33:22.923690",
+     "duration": 848.09092,
+     "end_time": "2023-12-19T05:34:02.778577",
      "exception": false,
-     "start_time": "2023-12-02T08:14:22.325164",
+     "start_time": "2023-12-19T05:19:54.687657",
      "status": "completed"
     },
     "tags": []
@@ -280,10 +281,10 @@
    "id": "1d88d599",
    "metadata": {
     "papermill": {
-     "duration": 0.034247,
-     "end_time": "2023-12-02T08:33:22.983811",
+     "duration": 0.004938,
+     "end_time": "2023-12-19T05:34:02.789026",
      "exception": false,
-     "start_time": "2023-12-02T08:33:22.949564",
+     "start_time": "2023-12-19T05:34:02.784088",
      "status": "completed"
     },
     "tags": []
@@ -298,16 +299,16 @@
    "id": "6e7f3421",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:33:23.090130Z",
-     "iopub.status.busy": "2023-12-02T08:33:23.089866Z",
-     "iopub.status.idle": "2023-12-02T08:34:09.586116Z",
-     "shell.execute_reply": "2023-12-02T08:34:09.585063Z"
+     "iopub.execute_input": "2023-12-19T05:34:02.800185Z",
+     "iopub.status.busy": "2023-12-19T05:34:02.799919Z",
+     "iopub.status.idle": "2023-12-19T05:34:31.992418Z",
+     "shell.execute_reply": "2023-12-19T05:34:31.991281Z"
     },
     "papermill": {
-     "duration": 46.563862,
-     "end_time": "2023-12-02T08:34:09.588172",
+     "duration": 29.200777,
+     "end_time": "2023-12-19T05:34:31.994648",
      "exception": false,
-     "start_time": "2023-12-02T08:33:23.024310",
+     "start_time": "2023-12-19T05:34:02.793871",
      "status": "completed"
     },
     "tags": []
@@ -331,10 +332,10 @@
    "id": "5dd1c434",
    "metadata": {
     "papermill": {
-     "duration": 0.004533,
-     "end_time": "2023-12-02T08:34:09.597990",
+     "duration": 0.005174,
+     "end_time": "2023-12-19T05:34:32.005788",
      "exception": false,
-     "start_time": "2023-12-02T08:34:09.593457",
+     "start_time": "2023-12-19T05:34:32.000614",
      "status": "completed"
     },
     "tags": []
@@ -349,16 +350,16 @@
    "id": "f0eb6f15",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:34:09.631896Z",
-     "iopub.status.busy": "2023-12-02T08:34:09.631607Z",
-     "iopub.status.idle": "2023-12-02T08:52:14.258376Z",
-     "shell.execute_reply": "2023-12-02T08:52:14.257662Z"
+     "iopub.execute_input": "2023-12-19T05:34:32.017841Z",
+     "iopub.status.busy": "2023-12-19T05:34:32.017562Z",
+     "iopub.status.idle": "2023-12-19T05:47:08.376553Z",
+     "shell.execute_reply": "2023-12-19T05:47:08.375946Z"
     },
     "papermill": {
-     "duration": 1084.634481,
-     "end_time": "2023-12-02T08:52:14.260195",
+     "duration": 756.36732,
+     "end_time": "2023-12-19T05:47:08.378345",
      "exception": false,
-     "start_time": "2023-12-02T08:34:09.625714",
+     "start_time": "2023-12-19T05:34:32.011025",
      "status": "completed"
     },
     "tags": []
@@ -383,10 +384,10 @@
    "id": "168d3871",
    "metadata": {
     "papermill": {
-     "duration": 0.004613,
-     "end_time": "2023-12-02T08:52:14.270169",
+     "duration": 0.004864,
+     "end_time": "2023-12-19T05:47:08.389250",
      "exception": false,
-     "start_time": "2023-12-02T08:52:14.265556",
+     "start_time": "2023-12-19T05:47:08.384386",
      "status": "completed"
     },
     "tags": []
@@ -401,16 +402,16 @@
    "id": "a8fb758c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:52:14.280407Z",
-     "iopub.status.busy": "2023-12-02T08:52:14.280251Z",
-     "iopub.status.idle": "2023-12-02T08:52:51.611164Z",
-     "shell.execute_reply": "2023-12-02T08:52:51.610439Z"
+     "iopub.execute_input": "2023-12-19T05:47:08.443867Z",
+     "iopub.status.busy": "2023-12-19T05:47:08.443712Z",
+     "iopub.status.idle": "2023-12-19T05:47:39.848312Z",
+     "shell.execute_reply": "2023-12-19T05:47:39.847571Z"
     },
     "papermill": {
-     "duration": 37.338329,
-     "end_time": "2023-12-02T08:52:51.613056",
+     "duration": 31.456328,
+     "end_time": "2023-12-19T05:47:39.850451",
      "exception": false,
-     "start_time": "2023-12-02T08:52:14.274727",
+     "start_time": "2023-12-19T05:47:08.394123",
      "status": "completed"
     },
     "tags": []
@@ -438,10 +439,10 @@
    "id": "ad8e6307",
    "metadata": {
     "papermill": {
-     "duration": 0.004683,
-     "end_time": "2023-12-02T08:52:51.622973",
+     "duration": 0.005345,
+     "end_time": "2023-12-19T05:47:39.861772",
      "exception": false,
-     "start_time": "2023-12-02T08:52:51.618290",
+     "start_time": "2023-12-19T05:47:39.856427",
      "status": "completed"
     },
     "tags": []
@@ -456,16 +457,16 @@
    "id": "3bf8e4fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:52:51.633574Z",
-     "iopub.status.busy": "2023-12-02T08:52:51.633285Z",
-     "iopub.status.idle": "2023-12-02T08:52:56.569344Z",
-     "shell.execute_reply": "2023-12-02T08:52:56.568505Z"
+     "iopub.execute_input": "2023-12-19T05:47:39.873974Z",
+     "iopub.status.busy": "2023-12-19T05:47:39.873531Z",
+     "iopub.status.idle": "2023-12-19T05:47:43.610623Z",
+     "shell.execute_reply": "2023-12-19T05:47:43.609937Z"
     },
     "papermill": {
-     "duration": 4.943995,
-     "end_time": "2023-12-02T08:52:56.571574",
+     "duration": 3.745326,
+     "end_time": "2023-12-19T05:47:43.612493",
      "exception": false,
-     "start_time": "2023-12-02T08:52:51.627579",
+     "start_time": "2023-12-19T05:47:39.867167",
      "status": "completed"
     },
     "tags": []
@@ -487,10 +488,10 @@
    "id": "f23026ea",
    "metadata": {
     "papermill": {
-     "duration": 0.00507,
-     "end_time": "2023-12-02T08:52:56.582520",
+     "duration": 0.004338,
+     "end_time": "2023-12-19T05:47:43.621806",
      "exception": false,
-     "start_time": "2023-12-02T08:52:56.577450",
+     "start_time": "2023-12-19T05:47:43.617468",
      "status": "completed"
     },
     "tags": []
@@ -505,16 +506,16 @@
    "id": "a82404e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:52:56.594007Z",
-     "iopub.status.busy": "2023-12-02T08:52:56.593850Z",
-     "iopub.status.idle": "2023-12-02T08:54:14.355366Z",
-     "shell.execute_reply": "2023-12-02T08:54:14.354736Z"
+     "iopub.execute_input": "2023-12-19T05:47:43.632229Z",
+     "iopub.status.busy": "2023-12-19T05:47:43.631636Z",
+     "iopub.status.idle": "2023-12-19T05:48:58.856348Z",
+     "shell.execute_reply": "2023-12-19T05:48:58.855499Z"
     },
     "papermill": {
-     "duration": 77.769646,
-     "end_time": "2023-12-02T08:54:14.357271",
+     "duration": 75.232216,
+     "end_time": "2023-12-19T05:48:58.858341",
      "exception": false,
-     "start_time": "2023-12-02T08:52:56.587625",
+     "start_time": "2023-12-19T05:47:43.626125",
      "status": "completed"
     },
     "tags": []
@@ -539,10 +540,10 @@
    "id": "40319403",
    "metadata": {
     "papermill": {
-     "duration": 0.004696,
-     "end_time": "2023-12-02T08:54:14.367428",
+     "duration": 0.00487,
+     "end_time": "2023-12-19T05:48:58.868901",
      "exception": false,
-     "start_time": "2023-12-02T08:54:14.362732",
+     "start_time": "2023-12-19T05:48:58.864031",
      "status": "completed"
     },
     "tags": []
@@ -557,16 +558,16 @@
    "id": "47f23804",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:54:14.377901Z",
-     "iopub.status.busy": "2023-12-02T08:54:14.377752Z",
-     "iopub.status.idle": "2023-12-02T08:54:53.735791Z",
-     "shell.execute_reply": "2023-12-02T08:54:53.734969Z"
+     "iopub.execute_input": "2023-12-19T05:48:58.879893Z",
+     "iopub.status.busy": "2023-12-19T05:48:58.879737Z",
+     "iopub.status.idle": "2023-12-19T05:49:38.442223Z",
+     "shell.execute_reply": "2023-12-19T05:49:38.441350Z"
     },
     "papermill": {
-     "duration": 39.36577,
-     "end_time": "2023-12-02T08:54:53.737945",
+     "duration": 39.570517,
+     "end_time": "2023-12-19T05:49:38.444357",
      "exception": false,
-     "start_time": "2023-12-02T08:54:14.372175",
+     "start_time": "2023-12-19T05:48:58.873840",
      "status": "completed"
     },
     "tags": []
@@ -587,10 +588,10 @@
    "id": "8b973e4e",
    "metadata": {
     "papermill": {
-     "duration": 0.005668,
-     "end_time": "2023-12-02T08:54:53.749448",
+     "duration": 0.004969,
+     "end_time": "2023-12-19T05:49:38.454784",
      "exception": false,
-     "start_time": "2023-12-02T08:54:53.743780",
+     "start_time": "2023-12-19T05:49:38.449815",
      "status": "completed"
     },
     "tags": []
@@ -605,16 +606,16 @@
    "id": "90f34d8b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:54:53.761308Z",
-     "iopub.status.busy": "2023-12-02T08:54:53.761103Z",
-     "iopub.status.idle": "2023-12-02T08:54:53.897166Z",
-     "shell.execute_reply": "2023-12-02T08:54:53.896388Z"
+     "iopub.execute_input": "2023-12-19T05:49:38.466162Z",
+     "iopub.status.busy": "2023-12-19T05:49:38.465508Z",
+     "iopub.status.idle": "2023-12-19T05:49:38.689801Z",
+     "shell.execute_reply": "2023-12-19T05:49:38.689055Z"
     },
     "papermill": {
-     "duration": 0.144157,
-     "end_time": "2023-12-02T08:54:53.898838",
+     "duration": 0.231849,
+     "end_time": "2023-12-19T05:49:38.691525",
      "exception": false,
-     "start_time": "2023-12-02T08:54:53.754681",
+     "start_time": "2023-12-19T05:49:38.459676",
      "status": "completed"
     },
     "tags": []
@@ -639,16 +640,16 @@
    "id": "42c75518",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:54:53.910049Z",
-     "iopub.status.busy": "2023-12-02T08:54:53.909883Z",
-     "iopub.status.idle": "2023-12-02T08:54:55.536714Z",
-     "shell.execute_reply": "2023-12-02T08:54:55.536039Z"
+     "iopub.execute_input": "2023-12-19T05:49:38.703028Z",
+     "iopub.status.busy": "2023-12-19T05:49:38.702862Z",
+     "iopub.status.idle": "2023-12-19T05:49:40.381012Z",
+     "shell.execute_reply": "2023-12-19T05:49:40.380353Z"
     },
     "papermill": {
-     "duration": 1.634336,
-     "end_time": "2023-12-02T08:54:55.538366",
+     "duration": 1.685776,
+     "end_time": "2023-12-19T05:49:40.382597",
      "exception": false,
-     "start_time": "2023-12-02T08:54:53.904030",
+     "start_time": "2023-12-19T05:49:38.696821",
      "status": "completed"
     },
     "tags": []
@@ -658,16 +659,16 @@
      "data": {
       "text/plain": [
        "source                      region          label     \n",
-       "Diaz-Rodriguez et al. 2021  North America   negative        57\n",
-       "                                            positive       170\n",
+       "Diaz-Rodriguez et al. 2021  North America   negative        45\n",
+       "                                            positive       168\n",
        "                            South America   negative       979\n",
        "                                            positive       126\n",
-       "random                      East Asia       unlabelled    4549\n",
-       "                            North America   unlabelled    7359\n",
-       "                            Other           unlabelled    4104\n",
-       "                            South America   unlabelled    6234\n",
-       "                            Southeast Asia  unlabelled    6758\n",
-       "                            Tethys          unlabelled    6984\n",
+       "random                      East Asia       unlabelled    4544\n",
+       "                            North America   unlabelled    7240\n",
+       "                            Other           unlabelled    4186\n",
+       "                            South America   unlabelled    6243\n",
+       "                            Southeast Asia  unlabelled    7589\n",
+       "                            Tethys          unlabelled    6060\n",
        "dtype: int64"
       ]
      },
@@ -688,10 +689,10 @@
    "id": "da5291f4",
    "metadata": {
     "papermill": {
-     "duration": 0.00514,
-     "end_time": "2023-12-02T08:54:55.549105",
+     "duration": 0.005192,
+     "end_time": "2023-12-19T05:49:40.393266",
      "exception": false,
-     "start_time": "2023-12-02T08:54:55.543965",
+     "start_time": "2023-12-19T05:49:40.388074",
      "status": "completed"
     },
     "tags": []
@@ -720,14 +721,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 2438.447061,
-   "end_time": "2023-12-02T08:54:58.273441",
+   "duration": 1790.887045,
+   "end_time": "2023-12-19T05:49:43.116110",
    "environment_variables": {},
    "exception": null,
    "input_path": "00a-extract_training_data.ipynb",
-   "output_path": "00a-extract_training_data_output.ipynb",
+   "output_path": "00a-extract_training_data.ipynb",
    "parameters": {},
-   "start_time": "2023-12-02T08:14:19.826380",
+   "start_time": "2023-12-19T05:19:52.229065",
    "version": "2.4.0"
   }
  },
