--- a/00b-extract_grid_data.ipynb
+++ b/00b-extract_grid_data.ipynb
@@ -6,16 +6,16 @@
    "id": "7064cd0e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:54:59.018924Z",
-     "iopub.status.busy": "2023-12-02T08:54:59.018220Z",
-     "iopub.status.idle": "2023-12-02T08:55:00.749760Z",
-     "shell.execute_reply": "2023-12-02T08:55:00.749028Z"
+     "iopub.execute_input": "2024-02-02T03:48:21.441820Z",
+     "iopub.status.busy": "2024-02-02T03:48:21.441667Z",
+     "iopub.status.idle": "2024-02-02T03:48:23.212572Z",
+     "shell.execute_reply": "2024-02-02T03:48:23.211829Z"
     },
     "papermill": {
-     "duration": 1.737806,
-     "end_time": "2023-12-02T08:55:00.751341",
+     "duration": 1.778325,
+     "end_time": "2024-02-02T03:48:23.214220",
      "exception": false,
-     "start_time": "2023-12-02T08:54:59.013535",
+     "start_time": "2024-02-02T03:48:21.435895",
      "status": "completed"
     },
     "tags": []
@@ -47,10 +47,11 @@
     "from lib.erodep import calculate_erodep\n",
     "from lib.misc import (\n",
     "    calculate_slab_flux,\n",
-    "    calculate_water_thickness,\n",
+    "    # calculate_water_thickness,\n",
     ")\n",
     "from lib.pu import generate_grid_points\n",
     "from lib.slab_dip import calculate_slab_dip\n",
+    "from lib.water import calculate_water_thickness\n",
     "\n",
     "# Suppress occasional joblib warnings\n",
     "%env PYTHONWARNINGS=ignore::UserWarning\n",
@@ -64,16 +65,16 @@
    "id": "b9df0e9a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:55:00.759856Z",
-     "iopub.status.busy": "2023-12-02T08:55:00.759702Z",
-     "iopub.status.idle": "2023-12-02T08:55:00.762961Z",
-     "shell.execute_reply": "2023-12-02T08:55:00.762328Z"
+     "iopub.execute_input": "2024-02-02T03:48:23.224748Z",
+     "iopub.status.busy": "2024-02-02T03:48:23.224541Z",
+     "iopub.status.idle": "2024-02-02T03:48:23.228100Z",
+     "shell.execute_reply": "2024-02-02T03:48:23.227616Z"
     },
     "papermill": {
-     "duration": 0.00914,
-     "end_time": "2023-12-02T08:55:00.764457",
+     "duration": 0.009805,
+     "end_time": "2024-02-02T03:48:23.229044",
      "exception": false,
-     "start_time": "2023-12-02T08:55:00.755317",
+     "start_time": "2024-02-02T03:48:23.219239",
      "status": "completed"
     },
     "tags": []
@@ -82,7 +83,7 @@
    "source": [
     "n_jobs = int(os.environ.get(\"N_JOBS\", 8))\n",
     "times = range(171)\n",
-    "verbose = False\n",
+    "verbose = bool(int(os.environ.get(\"VERBOSE\", 0)))\n",
     "\n",
     "grid_resolution = 0.5  # degrees\n"
    ]
@@ -93,16 +94,16 @@
    "id": "77b83aff",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:55:00.772749Z",
-     "iopub.status.busy": "2023-12-02T08:55:00.772592Z",
-     "iopub.status.idle": "2023-12-02T08:55:00.778809Z",
-     "shell.execute_reply": "2023-12-02T08:55:00.778166Z"
+     "iopub.execute_input": "2024-02-02T03:48:23.234835Z",
+     "iopub.status.busy": "2024-02-02T03:48:23.234680Z",
+     "iopub.status.idle": "2024-02-02T03:48:23.242147Z",
+     "shell.execute_reply": "2024-02-02T03:48:23.241570Z"
     },
     "papermill": {
-     "duration": 0.012418,
-     "end_time": "2023-12-02T08:55:00.780440",
+     "duration": 0.011472,
+     "end_time": "2024-02-02T03:48:23.243123",
      "exception": false,
-     "start_time": "2023-12-02T08:55:00.768022",
+     "start_time": "2024-02-02T03:48:23.231651",
      "status": "completed"
     },
     "tags": []
@@ -158,10 +159,10 @@
    "id": "eb746f63",
    "metadata": {
     "papermill": {
-     "duration": 0.003561,
-     "end_time": "2023-12-02T08:55:00.787648",
+     "duration": 0.002464,
+     "end_time": "2024-02-02T03:48:23.248325",
      "exception": false,
-     "start_time": "2023-12-02T08:55:00.784087",
+     "start_time": "2024-02-02T03:48:23.245861",
      "status": "completed"
     },
     "tags": []
@@ -176,16 +177,16 @@
    "id": "c7415048",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T08:55:00.795748Z",
-     "iopub.status.busy": "2023-12-02T08:55:00.795605Z",
-     "iopub.status.idle": "2023-12-02T09:12:43.645060Z",
-     "shell.execute_reply": "2023-12-02T09:12:43.644324Z"
+     "iopub.execute_input": "2024-02-02T03:48:23.253919Z",
+     "iopub.status.busy": "2024-02-02T03:48:23.253762Z",
+     "iopub.status.idle": "2024-02-02T04:00:46.334243Z",
+     "shell.execute_reply": "2024-02-02T04:00:46.333504Z"
     },
     "papermill": {
-     "duration": 1062.855742,
-     "end_time": "2023-12-02T09:12:43.646960",
+     "duration": 743.085753,
+     "end_time": "2024-02-02T04:00:46.336486",
      "exception": false,
-     "start_time": "2023-12-02T08:55:00.791218",
+     "start_time": "2024-02-02T03:48:23.250733",
      "status": "completed"
     },
     "tags": []
@@ -209,16 +210,16 @@
    "id": "42851c3c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T09:12:43.657008Z",
-     "iopub.status.busy": "2023-12-02T09:12:43.656835Z",
-     "iopub.status.idle": "2023-12-02T09:12:43.659624Z",
-     "shell.execute_reply": "2023-12-02T09:12:43.659235Z"
+     "iopub.execute_input": "2024-02-02T04:00:46.346552Z",
+     "iopub.status.busy": "2024-02-02T04:00:46.346382Z",
+     "iopub.status.idle": "2024-02-02T04:00:46.349677Z",
+     "shell.execute_reply": "2024-02-02T04:00:46.349141Z"
     },
     "papermill": {
-     "duration": 0.009109,
-     "end_time": "2023-12-02T09:12:43.661101",
+     "duration": 0.00981,
+     "end_time": "2024-02-02T04:00:46.351127",
      "exception": false,
-     "start_time": "2023-12-02T09:12:43.651992",
+     "start_time": "2024-02-02T04:00:46.341317",
      "status": "completed"
     },
     "tags": []
@@ -235,10 +236,10 @@
    "id": "0e2ba866",
    "metadata": {
     "papermill": {
-     "duration": 0.003671,
-     "end_time": "2023-12-02T09:12:43.668541",
+     "duration": 0.003992,
+     "end_time": "2024-02-02T04:00:46.359243",
      "exception": false,
-     "start_time": "2023-12-02T09:12:43.664870",
+     "start_time": "2024-02-02T04:00:46.355251",
      "status": "completed"
     },
     "tags": []
@@ -253,16 +254,16 @@
    "id": "7c03c5a2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T09:12:43.677171Z",
-     "iopub.status.busy": "2023-12-02T09:12:43.677023Z",
-     "iopub.status.idle": "2023-12-02T09:13:12.725775Z",
-     "shell.execute_reply": "2023-12-02T09:13:12.725024Z"
+     "iopub.execute_input": "2024-02-02T04:00:46.368101Z",
+     "iopub.status.busy": "2024-02-02T04:00:46.367950Z",
+     "iopub.status.idle": "2024-02-02T04:01:19.620305Z",
+     "shell.execute_reply": "2024-02-02T04:01:19.619676Z"
     },
     "papermill": {
-     "duration": 29.054634,
-     "end_time": "2023-12-02T09:13:12.727157",
+     "duration": 33.258942,
+     "end_time": "2024-02-02T04:01:19.622325",
      "exception": false,
-     "start_time": "2023-12-02T09:12:43.672523",
+     "start_time": "2024-02-02T04:00:46.363383",
      "status": "completed"
     },
     "tags": []
@@ -274,7 +275,7 @@
     "    subduction_data[\"seafloor_age (Ma)\"],\n",
     "    maxiter=100,\n",
     ")\n",
-    "subduction_data = calculate_water_thickness(subduction_data)\n",
+    "subduction_data = calculate_water_thickness(data=subduction_data)\n",
     "subduction_data = calculate_slab_flux(subduction_data)\n",
     "subduction_data = calculate_slab_dip(subduction_data)\n"
    ]
@@ -285,10 +286,10 @@
    "id": "cafffa14",
    "metadata": {
     "papermill": {
-     "duration": 0.002106,
-     "end_time": "2023-12-02T09:13:12.731828",
+     "duration": 0.004087,
+     "end_time": "2024-02-02T04:01:19.631033",
      "exception": false,
-     "start_time": "2023-12-02T09:13:12.729722",
+     "start_time": "2024-02-02T04:01:19.626946",
      "status": "completed"
     },
     "tags": []
@@ -303,16 +304,16 @@
    "id": "fbadac30",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T09:13:12.736987Z",
-     "iopub.status.busy": "2023-12-02T09:13:12.736810Z",
-     "iopub.status.idle": "2023-12-02T09:18:04.210528Z",
-     "shell.execute_reply": "2023-12-02T09:18:04.209751Z"
+     "iopub.execute_input": "2024-02-02T04:01:19.640034Z",
+     "iopub.status.busy": "2024-02-02T04:01:19.639878Z",
+     "iopub.status.idle": "2024-02-02T04:05:05.738324Z",
+     "shell.execute_reply": "2024-02-02T04:05:05.737368Z"
     },
     "papermill": {
-     "duration": 291.478773,
-     "end_time": "2023-12-02T09:18:04.212655",
+     "duration": 226.105267,
+     "end_time": "2024-02-02T04:05:05.740282",
      "exception": false,
-     "start_time": "2023-12-02T09:13:12.733882",
+     "start_time": "2024-02-02T04:01:19.635015",
      "status": "completed"
     },
     "tags": []
@@ -334,10 +335,10 @@
    "id": "6c7067fe",
    "metadata": {
     "papermill": {
-     "duration": 0.004184,
-     "end_time": "2023-12-02T09:18:04.221616",
+     "duration": 0.00402,
+     "end_time": "2024-02-02T04:05:05.749000",
      "exception": false,
-     "start_time": "2023-12-02T09:18:04.217432",
+     "start_time": "2024-02-02T04:05:05.744980",
      "status": "completed"
     },
     "tags": []
@@ -352,16 +353,16 @@
    "id": "317048a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T09:18:04.230942Z",
-     "iopub.status.busy": "2023-12-02T09:18:04.230749Z",
-     "iopub.status.idle": "2023-12-02T09:30:38.532920Z",
-     "shell.execute_reply": "2023-12-02T09:30:38.532101Z"
+     "iopub.execute_input": "2024-02-02T04:05:05.758504Z",
+     "iopub.status.busy": "2024-02-02T04:05:05.758290Z",
+     "iopub.status.idle": "2024-02-02T04:16:36.233874Z",
+     "shell.execute_reply": "2024-02-02T04:16:36.233089Z"
     },
     "papermill": {
-     "duration": 754.309365,
-     "end_time": "2023-12-02T09:30:38.535063",
+     "duration": 690.482762,
+     "end_time": "2024-02-02T04:16:36.235792",
      "exception": false,
-     "start_time": "2023-12-02T09:18:04.225698",
+     "start_time": "2024-02-02T04:05:05.753030",
      "status": "completed"
     },
     "tags": []
@@ -386,10 +387,10 @@
    "id": "3067ae47",
    "metadata": {
     "papermill": {
-     "duration": 0.004145,
-     "end_time": "2023-12-02T09:30:38.543926",
+     "duration": 0.004439,
+     "end_time": "2024-02-02T04:16:36.245512",
      "exception": false,
-     "start_time": "2023-12-02T09:30:38.539781",
+     "start_time": "2024-02-02T04:16:36.241073",
      "status": "completed"
     },
     "tags": []
@@ -404,16 +405,16 @@
    "id": "a90d7da4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T09:30:38.553025Z",
-     "iopub.status.busy": "2023-12-02T09:30:38.552837Z",
-     "iopub.status.idle": "2023-12-02T09:46:59.568305Z",
-     "shell.execute_reply": "2023-12-02T09:46:59.567533Z"
+     "iopub.execute_input": "2024-02-02T04:16:36.300115Z",
+     "iopub.status.busy": "2024-02-02T04:16:36.299959Z",
+     "iopub.status.idle": "2024-02-02T04:30:14.655649Z",
+     "shell.execute_reply": "2024-02-02T04:30:14.654864Z"
     },
     "papermill": {
-     "duration": 981.022614,
-     "end_time": "2023-12-02T09:46:59.570586",
+     "duration": 818.363315,
+     "end_time": "2024-02-02T04:30:14.657562",
      "exception": false,
-     "start_time": "2023-12-02T09:30:38.547972",
+     "start_time": "2024-02-02T04:16:36.294247",
      "status": "completed"
     },
     "tags": []
@@ -434,10 +435,10 @@
    "id": "48e28940",
    "metadata": {
     "papermill": {
-     "duration": 0.004201,
-     "end_time": "2023-12-02T09:46:59.579820",
+     "duration": 0.00434,
+     "end_time": "2024-02-02T04:30:14.666990",
      "exception": false,
-     "start_time": "2023-12-02T09:46:59.575619",
+     "start_time": "2024-02-02T04:30:14.662650",
      "status": "completed"
     },
     "tags": []
@@ -452,16 +453,16 @@
    "id": "333c91a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T09:46:59.589469Z",
-     "iopub.status.busy": "2023-12-02T09:46:59.589290Z",
-     "iopub.status.idle": "2023-12-02T09:49:19.329227Z",
-     "shell.execute_reply": "2023-12-02T09:49:19.328463Z"
+     "iopub.execute_input": "2024-02-02T04:30:14.676124Z",
+     "iopub.status.busy": "2024-02-02T04:30:14.675963Z",
+     "iopub.status.idle": "2024-02-02T04:32:52.445583Z",
+     "shell.execute_reply": "2024-02-02T04:32:52.444706Z"
     },
     "papermill": {
-     "duration": 139.747135,
-     "end_time": "2023-12-02T09:49:19.331271",
+     "duration": 157.776457,
+     "end_time": "2024-02-02T04:32:52.447511",
      "exception": false,
-     "start_time": "2023-12-02T09:46:59.584136",
+     "start_time": "2024-02-02T04:30:14.671054",
      "status": "completed"
     },
     "tags": []
@@ -477,10 +478,10 @@
    "id": "b51b394a",
    "metadata": {
     "papermill": {
-     "duration": 0.004196,
-     "end_time": "2023-12-02T09:49:19.351444",
+     "duration": 0.004145,
+     "end_time": "2024-02-02T04:32:52.456519",
      "exception": false,
-     "start_time": "2023-12-02T09:49:19.347248",
+     "start_time": "2024-02-02T04:32:52.452374",
      "status": "completed"
     },
     "tags": []
@@ -509,14 +510,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 3264.385669,
-   "end_time": "2023-12-02T09:49:22.677949",
+   "duration": 2675.221756,
+   "end_time": "2024-02-02T04:32:55.784266",
    "environment_variables": {},
    "exception": null,
    "input_path": "00b-extract_grid_data.ipynb",
-   "output_path": "00b-extract_grid_data_output.ipynb",
+   "output_path": "00b-extract_grid_data.ipynb",
    "parameters": {},
-   "start_time": "2023-12-02T08:54:58.292280",
+   "start_time": "2024-02-02T03:48:20.562510",
    "version": "2.4.0"
   }
  },
