--- a/02-create_probability_maps.ipynb
+++ b/02-create_probability_maps.ipynb
@@ -6,10 +6,10 @@
    "id": "f09ddee5",
    "metadata": {
     "papermill": {
-     "duration": 0.003377,
-     "end_time": "2023-12-02T10:11:03.117494",
+     "duration": 0.003315,
+     "end_time": "2023-12-19T22:42:47.549188",
      "exception": false,
-     "start_time": "2023-12-02T10:11:03.114117",
+     "start_time": "2023-12-19T22:42:47.545873",
      "status": "completed"
     },
     "tags": []
@@ -26,16 +26,16 @@
    "id": "ec9f49db",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T10:11:03.124123Z",
-     "iopub.status.busy": "2023-12-02T10:11:03.123975Z",
-     "iopub.status.idle": "2023-12-02T10:11:03.129242Z",
-     "shell.execute_reply": "2023-12-02T10:11:03.128816Z"
+     "iopub.execute_input": "2023-12-19T22:42:47.555855Z",
+     "iopub.status.busy": "2023-12-19T22:42:47.555702Z",
+     "iopub.status.idle": "2023-12-19T22:42:47.562124Z",
+     "shell.execute_reply": "2023-12-19T22:42:47.561513Z"
     },
     "papermill": {
-     "duration": 0.010213,
-     "end_time": "2023-12-02T10:11:03.130568",
+     "duration": 0.011592,
+     "end_time": "2023-12-19T22:42:47.563820",
      "exception": false,
-     "start_time": "2023-12-02T10:11:03.120355",
+     "start_time": "2023-12-19T22:42:47.552228",
      "status": "completed"
     },
     "tags": []
@@ -51,16 +51,16 @@
    "id": "8678b7a7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T10:11:03.135915Z",
-     "iopub.status.busy": "2023-12-02T10:11:03.135772Z",
-     "iopub.status.idle": "2023-12-02T10:11:04.990836Z",
-     "shell.execute_reply": "2023-12-02T10:11:04.990361Z"
+     "iopub.execute_input": "2023-12-19T22:42:47.570321Z",
+     "iopub.status.busy": "2023-12-19T22:42:47.570132Z",
+     "iopub.status.idle": "2023-12-19T22:42:49.421460Z",
+     "shell.execute_reply": "2023-12-19T22:42:49.420836Z"
     },
     "papermill": {
-     "duration": 1.859901,
-     "end_time": "2023-12-02T10:11:04.992716",
+     "duration": 1.856781,
+     "end_time": "2023-12-19T22:42:49.423443",
      "exception": false,
-     "start_time": "2023-12-02T10:11:03.132815",
+     "start_time": "2023-12-19T22:42:47.566662",
      "status": "completed"
     },
     "tags": []
@@ -86,16 +86,16 @@
    "id": "53cac4c4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T10:11:04.999606Z",
-     "iopub.status.busy": "2023-12-02T10:11:04.999232Z",
-     "iopub.status.idle": "2023-12-02T10:11:05.005093Z",
-     "shell.execute_reply": "2023-12-02T10:11:05.004699Z"
+     "iopub.execute_input": "2023-12-19T22:42:49.430624Z",
+     "iopub.status.busy": "2023-12-19T22:42:49.430269Z",
+     "iopub.status.idle": "2023-12-19T22:42:49.436413Z",
+     "shell.execute_reply": "2023-12-19T22:42:49.435883Z"
     },
     "papermill": {
-     "duration": 0.010698,
-     "end_time": "2023-12-02T10:11:05.006447",
+     "duration": 0.01106,
+     "end_time": "2023-12-19T22:42:49.437780",
      "exception": false,
-     "start_time": "2023-12-02T10:11:04.995749",
+     "start_time": "2023-12-19T22:42:49.426720",
      "status": "completed"
     },
     "tags": []
@@ -104,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "<dask.config.set at 0x7f4240053e10>"
+       "<dask.config.set at 0x7fb8460c5b90>"
       ]
      },
      "execution_count": 3,
@@ -123,10 +123,10 @@
    "id": "0b2519c9",
    "metadata": {
     "papermill": {
-     "duration": 0.002744,
-     "end_time": "2023-12-02T10:11:05.012078",
+     "duration": 0.002933,
+     "end_time": "2023-12-19T22:42:49.443949",
      "exception": false,
-     "start_time": "2023-12-02T10:11:05.009334",
+     "start_time": "2023-12-19T22:42:49.441016",
      "status": "completed"
     },
     "tags": []
@@ -141,16 +141,16 @@
    "id": "5cfb3705",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T10:11:05.018716Z",
-     "iopub.status.busy": "2023-12-02T10:11:05.018570Z",
-     "iopub.status.idle": "2023-12-02T10:11:15.524617Z",
-     "shell.execute_reply": "2023-12-02T10:11:15.523927Z"
+     "iopub.execute_input": "2023-12-19T22:42:49.450518Z",
+     "iopub.status.busy": "2023-12-19T22:42:49.450382Z",
+     "iopub.status.idle": "2023-12-19T22:42:54.265122Z",
+     "shell.execute_reply": "2023-12-19T22:42:54.264490Z"
     },
     "papermill": {
-     "duration": 10.511404,
-     "end_time": "2023-12-02T10:11:15.526436",
+     "duration": 4.820303,
+     "end_time": "2023-12-19T22:42:54.267169",
      "exception": false,
-     "start_time": "2023-12-02T10:11:05.015032",
+     "start_time": "2023-12-19T22:42:49.446866",
      "status": "completed"
     },
     "tags": []
@@ -174,10 +174,10 @@
    "id": "9529131c",
    "metadata": {
     "papermill": {
-     "duration": 0.003072,
-     "end_time": "2023-12-02T10:11:15.533135",
+     "duration": 0.002951,
+     "end_time": "2023-12-19T22:42:54.273600",
      "exception": false,
-     "start_time": "2023-12-02T10:11:15.530063",
+     "start_time": "2023-12-19T22:42:54.270649",
      "status": "completed"
     },
     "tags": []
@@ -192,16 +192,16 @@
    "id": "196a6d7e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T10:11:15.540230Z",
-     "iopub.status.busy": "2023-12-02T10:11:15.540078Z",
-     "iopub.status.idle": "2023-12-02T10:14:09.334063Z",
-     "shell.execute_reply": "2023-12-02T10:14:09.333217Z"
+     "iopub.execute_input": "2023-12-19T22:42:54.280467Z",
+     "iopub.status.busy": "2023-12-19T22:42:54.280314Z",
+     "iopub.status.idle": "2023-12-19T22:45:12.343948Z",
+     "shell.execute_reply": "2023-12-19T22:45:12.343058Z"
     },
     "papermill": {
-     "duration": 173.799602,
-     "end_time": "2023-12-02T10:14:09.335773",
+     "duration": 138.069283,
+     "end_time": "2023-12-19T22:45:12.345800",
      "exception": false,
-     "start_time": "2023-12-02T10:11:15.536171",
+     "start_time": "2023-12-19T22:42:54.276517",
      "status": "completed"
     },
     "tags": []
@@ -218,7 +218,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done! (duration: 0:02:31.636297)\n"
+      "Done! (duration: 0:01:59.936872)\n"
      ]
     },
     {
@@ -232,7 +232,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done! (duration: 0:00:22.149152)\n"
+      "Done! (duration: 0:00:18.117867)\n"
      ]
     }
    ],
@@ -280,10 +280,10 @@
    "id": "dfce6d61",
    "metadata": {
     "papermill": {
-     "duration": 0.003316,
-     "end_time": "2023-12-02T10:14:09.343193",
+     "duration": 0.012836,
+     "end_time": "2023-12-19T22:45:12.362538",
      "exception": false,
-     "start_time": "2023-12-02T10:14:09.339877",
+     "start_time": "2023-12-19T22:45:12.349702",
      "status": "completed"
     },
     "tags": []
@@ -298,16 +298,16 @@
    "id": "1e1b3c0f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-02T10:14:09.351393Z",
-     "iopub.status.busy": "2023-12-02T10:14:09.350900Z",
-     "iopub.status.idle": "2023-12-02T10:23:06.041180Z",
-     "shell.execute_reply": "2023-12-02T10:23:06.040350Z"
+     "iopub.execute_input": "2023-12-19T22:45:12.370734Z",
+     "iopub.status.busy": "2023-12-19T22:45:12.370117Z",
+     "iopub.status.idle": "2023-12-19T22:57:08.189678Z",
+     "shell.execute_reply": "2023-12-19T22:57:08.188718Z"
     },
     "papermill": {
-     "duration": 536.699273,
-     "end_time": "2023-12-02T10:23:06.045768",
+     "duration": 715.827955,
+     "end_time": "2023-12-19T22:57:08.193806",
      "exception": false,
-     "start_time": "2023-12-02T10:14:09.346495",
+     "start_time": "2023-12-19T22:45:12.365851",
      "status": "completed"
     },
     "tags": []
@@ -376,10 +376,10 @@
    "id": "269b4994",
    "metadata": {
     "papermill": {
-     "duration": 0.003581,
-     "end_time": "2023-12-02T10:23:06.053107",
+     "duration": 0.003844,
+     "end_time": "2023-12-19T22:57:08.201878",
      "exception": false,
-     "start_time": "2023-12-02T10:23:06.049526",
+     "start_time": "2023-12-19T22:57:08.198034",
      "status": "completed"
     },
     "tags": []
@@ -408,14 +408,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 726.461321,
-   "end_time": "2023-12-02T10:23:08.775783",
+   "duration": 864.101515,
+   "end_time": "2023-12-19T22:57:10.926783",
    "environment_variables": {},
    "exception": null,
    "input_path": "02-create_probability_maps.ipynb",
    "output_path": "02-create_probability_maps_output.ipynb",
    "parameters": {},
-   "start_time": "2023-12-02T10:11:02.314462",
+   "start_time": "2023-12-19T22:42:46.825268",
    "version": "2.4.0"
   }
  },
