--- a/02a-create_probability_maps_global.ipynb
+++ b/02a-create_probability_maps_global.ipynb
@@ -6,10 +6,10 @@
    "id": "80263a75",
    "metadata": {
     "papermill": {
-     "duration": 0.003153,
-     "end_time": "2023-12-15T05:37:02.589324",
+     "duration": 0.002635,
+     "end_time": "2024-03-13T05:49:58.577302",
      "exception": false,
-     "start_time": "2023-12-15T05:37:02.586171",
+     "start_time": "2024-03-13T05:49:58.574667",
      "status": "completed"
     },
     "tags": []
@@ -26,23 +26,23 @@
    "id": "9057911b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-15T05:37:02.596376Z",
-     "iopub.status.busy": "2023-12-15T05:37:02.596132Z",
-     "iopub.status.idle": "2023-12-15T05:37:02.603966Z",
-     "shell.execute_reply": "2023-12-15T05:37:02.603094Z"
+     "iopub.execute_input": "2024-03-13T05:49:58.582138Z",
+     "iopub.status.busy": "2024-03-13T05:49:58.581886Z",
+     "iopub.status.idle": "2024-03-13T05:49:58.588190Z",
+     "shell.execute_reply": "2024-03-13T05:49:58.587634Z"
     },
     "papermill": {
-     "duration": 0.013276,
-     "end_time": "2023-12-15T05:37:02.605673",
+     "duration": 0.010618,
+     "end_time": "2024-03-13T05:49:58.589919",
      "exception": false,
-     "start_time": "2023-12-15T05:37:02.592397",
+     "start_time": "2024-03-13T05:49:58.579301",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "use_extracted_data = False\n"
+    "use_extracted_data = False"
    ]
   },
   {
@@ -51,16 +51,16 @@
    "id": "5303979d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-15T05:37:02.612443Z",
-     "iopub.status.busy": "2023-12-15T05:37:02.612204Z",
-     "iopub.status.idle": "2023-12-15T05:37:04.499199Z",
-     "shell.execute_reply": "2023-12-15T05:37:04.498578Z"
+     "iopub.execute_input": "2024-03-13T05:49:58.594308Z",
+     "iopub.status.busy": "2024-03-13T05:49:58.594078Z",
+     "iopub.status.idle": "2024-03-13T05:50:02.982506Z",
+     "shell.execute_reply": "2024-03-13T05:50:02.981849Z"
     },
     "papermill": {
-     "duration": 1.892455,
-     "end_time": "2023-12-15T05:37:04.501051",
+     "duration": 4.392185,
+     "end_time": "2024-03-13T05:50:02.983957",
      "exception": false,
-     "start_time": "2023-12-15T05:37:02.608596",
+     "start_time": "2024-03-13T05:49:58.591772",
      "status": "completed"
     },
     "tags": []
@@ -77,7 +77,7 @@
     "from joblib import load\n",
     "\n",
     "from lib.check_files import check_prepared_data\n",
-    "from lib.pu import create_probability_grids\n"
+    "from lib.pu import create_probability_grids"
    ]
   },
   {
@@ -86,16 +86,16 @@
    "id": "7c013b25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-15T05:37:04.508343Z",
-     "iopub.status.busy": "2023-12-15T05:37:04.507975Z",
-     "iopub.status.idle": "2023-12-15T05:37:04.513942Z",
-     "shell.execute_reply": "2023-12-15T05:37:04.513421Z"
+     "iopub.execute_input": "2024-03-13T05:50:02.988356Z",
+     "iopub.status.busy": "2024-03-13T05:50:02.988009Z",
+     "iopub.status.idle": "2024-03-13T05:50:02.993818Z",
+     "shell.execute_reply": "2024-03-13T05:50:02.993008Z"
     },
     "papermill": {
-     "duration": 0.01104,
-     "end_time": "2023-12-15T05:37:04.515427",
+     "duration": 0.009492,
+     "end_time": "2024-03-13T05:50:02.995247",
      "exception": false,
-     "start_time": "2023-12-15T05:37:04.504387",
+     "start_time": "2024-03-13T05:50:02.985755",
      "status": "completed"
     },
     "tags": []
@@ -104,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "<dask.config.set at 0x7fa2b8563690>"
+       "<dask.config.set at 0x1c2143d50>"
       ]
      },
      "execution_count": 3,
@@ -114,7 +114,7 @@
    ],
    "source": [
     "n_jobs = int(os.environ.get(\"N_JOBS\", 8))\n",
-    "dask.config.set(num_workers=n_jobs)\n"
+    "dask.config.set(num_workers=n_jobs)"
    ]
   },
   {
@@ -123,10 +123,10 @@
    "id": "632c1c44",
    "metadata": {
     "papermill": {
-     "duration": 0.002919,
-     "end_time": "2023-12-15T05:37:04.521529",
+     "duration": 0.001526,
+     "end_time": "2024-03-13T05:50:02.998639",
      "exception": false,
-     "start_time": "2023-12-15T05:37:04.518610",
+     "start_time": "2024-03-13T05:50:02.997113",
      "status": "completed"
     },
     "tags": []
@@ -141,16 +141,16 @@
    "id": "f01bd62d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-15T05:37:04.528195Z",
-     "iopub.status.busy": "2023-12-15T05:37:04.528048Z",
-     "iopub.status.idle": "2023-12-15T05:37:20.681227Z",
-     "shell.execute_reply": "2023-12-15T05:37:20.680608Z"
+     "iopub.execute_input": "2024-03-13T05:50:03.002772Z",
+     "iopub.status.busy": "2024-03-13T05:50:03.002560Z",
+     "iopub.status.idle": "2024-03-13T05:50:09.119469Z",
+     "shell.execute_reply": "2024-03-13T05:50:09.118775Z"
     },
     "papermill": {
-     "duration": 16.158618,
-     "end_time": "2023-12-15T05:37:20.683131",
+     "duration": 6.121063,
+     "end_time": "2024-03-13T05:50:09.121208",
      "exception": false,
-     "start_time": "2023-12-15T05:37:04.524513",
+     "start_time": "2024-03-13T05:50:03.000145",
      "status": "completed"
     },
     "tags": []
@@ -163,9 +163,11 @@
     "    data_dir = \"prepared_data\"\n",
     "    check_prepared_data(data_dir, verbose=True)\n",
     "data_filename = os.path.join(data_dir, \"grid_data.csv\")\n",
-    "point_data = dd.read_csv(data_filename)\n",
+    "training_filename = os.path.join(data_dir, \"training_data_global.csv\")\n",
     "\n",
-    "df_out = point_data[[\"lon\", \"lat\", \"age (Ma)\"]].compute()\n"
+    "point_data = dd.read_csv(data_filename)\n",
+    "df_out = point_data[[\"lon\", \"lat\", \"age (Ma)\"]].compute()\n",
+    "regions = list(dd.read_csv(training_filename)[\"region\"].unique())"
    ]
   },
   {
@@ -174,10 +176,10 @@
    "id": "dc314a0d",
    "metadata": {
     "papermill": {
-     "duration": 0.002907,
-     "end_time": "2023-12-15T05:37:20.689517",
+     "duration": 0.001997,
+     "end_time": "2024-03-13T05:50:09.125993",
      "exception": false,
-     "start_time": "2023-12-15T05:37:20.686610",
+     "start_time": "2024-03-13T05:50:09.123996",
      "status": "completed"
     },
     "tags": []
@@ -192,16 +194,16 @@
    "id": "5ac247e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-15T05:37:20.696353Z",
-     "iopub.status.busy": "2023-12-15T05:37:20.696198Z",
-     "iopub.status.idle": "2023-12-15T05:40:40.289992Z",
-     "shell.execute_reply": "2023-12-15T05:40:40.289296Z"
+     "iopub.execute_input": "2024-03-13T05:50:09.131035Z",
+     "iopub.status.busy": "2024-03-13T05:50:09.130737Z",
+     "iopub.status.idle": "2024-03-13T06:11:10.590499Z",
+     "shell.execute_reply": "2024-03-13T06:11:10.589851Z"
     },
     "papermill": {
-     "duration": 199.601423,
-     "end_time": "2023-12-15T05:40:40.293889",
+     "duration": 1261.46606,
+     "end_time": "2024-03-13T06:11:10.593924",
      "exception": false,
-     "start_time": "2023-12-15T05:37:20.692466",
+     "start_time": "2024-03-13T05:50:09.127864",
      "status": "completed"
     },
     "tags": []
@@ -211,28 +213,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model... "
+      "Calculating probabilities for PU model complete (region: global; duration: 0:03:15.843744)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done! (duration: 0:02:46.127116)\n"
+      "Calculating probabilities for PU model complete (region: North America; duration: 0:02:54.157393)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for SVM model... "
+      "Calculating probabilities for PU model complete (region: South America; duration: 0:03:06.943133)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done! (duration: 0:00:33.458220)\n"
+      "Calculating probabilities for PU model complete (region: Southeast Asia; duration: 0:03:10.606686)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating probabilities for PU model complete (region: Tethys; duration: 0:03:10.765249)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating probabilities for SVM model complete (region: global; duration: 0:01:58.452027)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating probabilities for SVM model complete (region: North America; duration: 0:01:33.380360)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating probabilities for SVM model complete (region: South America; duration: 0:01:51.301283)\n"
      ]
     }
    ],
@@ -240,18 +270,13 @@
     "output_dir = os.path.join(\"outputs\", \"global\")\n",
     "\n",
     "for algorithm in (\"PU\", \"SVM\"):\n",
-    "    print(\n",
-    "        f\"Calculating probabilities for {algorithm} model... \",\n",
-    "        end=\"\",\n",
-    "        flush=True,\n",
-    "    )\n",
     "    t0 = time.time()\n",
     "\n",
     "    subdir = os.path.join(output_dir, algorithm)\n",
     "    model_filename = os.path.join(subdir, f\"classifier.joblib\")\n",
     "    probabilities_filename = os.path.join(\n",
     "        subdir,\n",
-    "        f\"grid_probabilities.csv\",\n",
+    "        \"grid_probabilities.csv\",\n",
     "    )\n",
     "    model = load(model_filename)\n",
     "\n",
@@ -261,7 +286,6 @@
     "        model[-1].set_params(n_jobs=1)\n",
     "    except ValueError:\n",
     "        pass\n",
-    "\n",
     "    model_parallel = ParallelPostFit(model)\n",
     "\n",
     "    point_x = point_data[model.feature_names_in_]\n",
@@ -272,7 +296,45 @@
     "    probabilities.to_csv(probabilities_filename, index=False)\n",
     "    del probabilities, model\n",
     "    duration = timedelta(seconds=time.time() - t0)\n",
-    "    print(f\"Done! (duration: {duration})\", flush=True)\n",
+    "    print(\n",
+    "        f\"Calculating probabilities for {algorithm} model complete\",\n",
+    "        f\"(region: global; duration: {duration})\",\n",
+    "    )\n",
+    "\n",
+    "    for region in regions:\n",
+    "        region_code = \"_\".join(region.lower().split())\n",
+    "        model_filename = os.path.join(\n",
+    "            subdir,\n",
+    "            f\"classifier_{region_code}.joblib\",\n",
+    "        )\n",
+    "        if not os.path.isfile(model_filename):\n",
+    "            continue\n",
+    "        t0 = time.time()\n",
+    "\n",
+    "        probabilities_filename = os.path.join(\n",
+    "            subdir,\n",
+    "            f\"grid_probabilities_{region_code}.csv\",\n",
+    "        )\n",
+    "        model = load(model_filename)\n",
+    "\n",
+    "        try:\n",
+    "            model[-1].set_params(n_jobs=1)\n",
+    "        except ValueError:\n",
+    "            pass\n",
+    "        model_parallel = ParallelPostFit(model)\n",
+    "\n",
+    "        point_x = point_data[model.feature_names_in_]\n",
+    "        p = model_parallel.predict_proba(point_x)[:, 1].ravel().compute()\n",
+    "        probabilities = df_out.copy()\n",
+    "        probabilities[\"probability\"] = p\n",
+    "        del p\n",
+    "        probabilities.to_csv(probabilities_filename, index=False)\n",
+    "        del probabilities, model\n",
+    "        duration = timedelta(seconds=time.time() - t0)\n",
+    "        print(\n",
+    "            f\"Calculating probabilities for {algorithm} model complete\",\n",
+    "            f\"(region: {region}; duration: {duration})\",\n",
+    "        )\n",
     "\n",
     "del point_data\n"
    ]
@@ -282,10 +344,10 @@
    "id": "e94d2cc2",
    "metadata": {
     "papermill": {
-     "duration": 0.003349,
-     "end_time": "2023-12-15T05:40:40.300769",
+     "duration": 0.002345,
+     "end_time": "2024-03-13T06:11:10.598691",
      "exception": false,
-     "start_time": "2023-12-15T05:40:40.297420",
+     "start_time": "2024-03-13T06:11:10.596346",
      "status": "completed"
     },
     "tags": []
@@ -300,16 +362,16 @@
    "id": "23b349d7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-15T05:40:40.308486Z",
-     "iopub.status.busy": "2023-12-15T05:40:40.308240Z",
-     "iopub.status.idle": "2023-12-15T05:48:03.314227Z",
-     "shell.execute_reply": "2023-12-15T05:48:03.313237Z"
+     "iopub.execute_input": "2024-03-13T06:11:10.604296Z",
+     "iopub.status.busy": "2024-03-13T06:11:10.604055Z",
+     "iopub.status.idle": "2024-03-13T07:57:21.512286Z",
+     "shell.execute_reply": "2024-03-13T07:57:21.511544Z"
     },
     "papermill": {
-     "duration": 443.014024,
-     "end_time": "2023-12-15T05:48:03.318049",
+     "duration": 6370.916216,
+     "end_time": "2024-03-13T07:57:21.517145",
      "exception": false,
-     "start_time": "2023-12-15T05:40:40.304025",
+     "start_time": "2024-03-13T06:11:10.600929",
      "status": "completed"
     },
     "tags": []
@@ -319,48 +381,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model... "
+      "Creating grids for PU model complete (region: global; duration: 0:13:11.713105)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done! (duration: 0:03:35.476700)\n"
+      "Creating grids for PU model complete (region: North America; duration: 0:13:21.995436)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for SVM model... "
+      "Creating grids for PU model complete (region: South America; duration: 0:13:25.114693)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done! (duration: 0:03:47.519718)\n"
+      "Creating grids for PU model complete (region: Southeast Asia; duration: 0:13:07.798919)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating grids for PU model complete (region: Tethys; duration: 0:13:06.822083)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating grids for SVM model complete (region: global; duration: 0:13:29.665323)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating grids for SVM model complete (region: North America; duration: 0:13:23.600845)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating grids for SVM model complete (region: South America; duration: 0:13:04.187936)\n"
      ]
     }
    ],
    "source": [
     "for algorithm in (\"PU\", \"SVM\"):\n",
-    "    print(\n",
-    "        f\"Creating grids for {algorithm} model... \",\n",
-    "        end=\"\",\n",
-    "        flush=True,\n",
-    "    )\n",
     "    t0 = time.time()\n",
     "\n",
     "    subdir = os.path.join(output_dir, algorithm)\n",
     "    probabilities_filename = os.path.join(\n",
     "        subdir,\n",
-    "        f\"grid_probabilities.csv\",\n",
+    "        \"grid_probabilities.csv\",\n",
     "    )\n",
     "    grid_output_dir = os.path.join(\n",
     "        subdir,\n",
-    "        f\"probability_grids\",\n",
+    "        \"probability_grids\",\n",
     "    )\n",
     "    os.makedirs(grid_output_dir, exist_ok=True)\n",
     "\n",
@@ -371,19 +456,51 @@
     "        extent=(-180, 180, -90, 90),\n",
     "    )\n",
     "    duration = timedelta(seconds=time.time() - t0)\n",
-    "    print(f\"Done! (duration: {duration})\", flush=True)\n"
+    "    print(\n",
+    "        f\"Creating grids for {algorithm} model complete\",\n",
+    "        f\"(region: global; duration: {duration})\",\n",
+    "    )\n",
+    "\n",
+    "    for region in regions:\n",
+    "        region_code = \"_\".join(region.lower().split())\n",
+    "        subdir = os.path.join(output_dir, algorithm)\n",
+    "        probabilities_filename = os.path.join(\n",
+    "            subdir,\n",
+    "            f\"grid_probabilities_{region_code}.csv\",\n",
+    "        )\n",
+    "        if not os.path.isfile(probabilities_filename):\n",
+    "            continue\n",
+    "        t0 = time.time()\n",
+    "\n",
+    "        grid_output_dir = os.path.join(\n",
+    "            subdir,\n",
+    "            f\"probability_grids_{region_code}\",\n",
+    "        )\n",
+    "        os.makedirs(grid_output_dir, exist_ok=True)\n",
+    "\n",
+    "        create_probability_grids(\n",
+    "            data=probabilities_filename,\n",
+    "            output_dir=grid_output_dir,\n",
+    "            threads=n_jobs,\n",
+    "            extent=(-180, 180, -90, 90),\n",
+    "        )\n",
+    "        duration = timedelta(seconds=time.time() - t0)\n",
+    "        print(\n",
+    "            f\"Creating grids for {algorithm} model complete\",\n",
+    "            f\"(region: {region}; duration: {duration})\",\n",
+    "        )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01345ac5",
+   "id": "d779a208",
    "metadata": {
     "papermill": {
-     "duration": 0.003605,
-     "end_time": "2023-12-15T05:48:03.325558",
+     "duration": 0.002769,
+     "end_time": "2024-03-13T07:57:21.523014",
      "exception": false,
-     "start_time": "2023-12-15T05:48:03.321953",
+     "start_time": "2024-03-13T07:57:21.520245",
      "status": "completed"
     },
     "tags": []
@@ -408,18 +525,18 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.7"
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 664.284569,
-   "end_time": "2023-12-15T05:48:06.148601",
+   "duration": 7647.065137,
+   "end_time": "2024-03-13T07:57:24.563805",
    "environment_variables": {},
    "exception": null,
    "input_path": "02a-create_probability_maps_global.ipynb",
-   "output_path": "02a-create_probability_maps_global_output.ipynb",
+   "output_path": "02a-create_probability_maps_global.ipynb",
    "parameters": {},
-   "start_time": "2023-12-15T05:37:01.864032",
+   "start_time": "2024-03-13T05:49:57.498668",
    "version": "2.4.0"
   }
  },
