--- a/01-create_classifiers.ipynb
+++ b/01-create_classifiers.ipynb
@@ -5,10 +5,10 @@
    "id": "58f4f93f",
    "metadata": {
     "papermill": {
-     "duration": 0.00409,
-     "end_time": "2023-12-03T05:18:34.931081",
+     "duration": 0.005879,
+     "end_time": "2023-12-19T22:30:59.183089",
      "exception": false,
-     "start_time": "2023-12-03T05:18:34.926991",
+     "start_time": "2023-12-19T22:30:59.177210",
      "status": "completed"
     },
     "tags": []
@@ -22,10 +22,10 @@
    "id": "bce162da",
    "metadata": {
     "papermill": {
-     "duration": 0.003365,
-     "end_time": "2023-12-03T05:18:34.938228",
+     "duration": 0.005246,
+     "end_time": "2023-12-19T22:30:59.193715",
      "exception": false,
-     "start_time": "2023-12-03T05:18:34.934863",
+     "start_time": "2023-12-19T22:30:59.188469",
      "status": "completed"
     },
     "tags": []
@@ -40,16 +40,16 @@
    "id": "c8549c11",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-03T05:18:34.946991Z",
-     "iopub.status.busy": "2023-12-03T05:18:34.946506Z",
-     "iopub.status.idle": "2023-12-03T05:18:34.952810Z",
-     "shell.execute_reply": "2023-12-03T05:18:34.952288Z"
+     "iopub.execute_input": "2023-12-19T22:30:59.205587Z",
+     "iopub.status.busy": "2023-12-19T22:30:59.205421Z",
+     "iopub.status.idle": "2023-12-19T22:30:59.211223Z",
+     "shell.execute_reply": "2023-12-19T22:30:59.210585Z"
     },
     "papermill": {
-     "duration": 0.012626,
-     "end_time": "2023-12-03T05:18:34.954499",
+     "duration": 0.014316,
+     "end_time": "2023-12-19T22:30:59.213114",
      "exception": false,
-     "start_time": "2023-12-03T05:18:34.941873",
+     "start_time": "2023-12-19T22:30:59.198798",
      "status": "completed"
     },
     "tags": []
@@ -65,16 +65,16 @@
    "id": "c82342ea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-03T05:18:34.963118Z",
-     "iopub.status.busy": "2023-12-03T05:18:34.962615Z",
-     "iopub.status.idle": "2023-12-03T05:18:37.113253Z",
-     "shell.execute_reply": "2023-12-03T05:18:37.112449Z"
+     "iopub.execute_input": "2023-12-19T22:30:59.224742Z",
+     "iopub.status.busy": "2023-12-19T22:30:59.224590Z",
+     "iopub.status.idle": "2023-12-19T22:31:00.932876Z",
+     "shell.execute_reply": "2023-12-19T22:31:00.932271Z"
     },
     "papermill": {
-     "duration": 2.156492,
-     "end_time": "2023-12-03T05:18:37.114484",
+     "duration": 1.715953,
+     "end_time": "2023-12-19T22:31:00.934453",
      "exception": false,
-     "start_time": "2023-12-03T05:18:34.957992",
+     "start_time": "2023-12-19T22:30:59.218500",
      "status": "completed"
     },
     "tags": []
@@ -124,16 +124,16 @@
    "id": "30758c64",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-03T05:18:37.122991Z",
-     "iopub.status.busy": "2023-12-03T05:18:37.122525Z",
-     "iopub.status.idle": "2023-12-03T05:18:37.127210Z",
-     "shell.execute_reply": "2023-12-03T05:18:37.126533Z"
+     "iopub.execute_input": "2023-12-19T22:31:00.945389Z",
+     "iopub.status.busy": "2023-12-19T22:31:00.945047Z",
+     "iopub.status.idle": "2023-12-19T22:31:00.948953Z",
+     "shell.execute_reply": "2023-12-19T22:31:00.948468Z"
     },
     "papermill": {
-     "duration": 0.009804,
-     "end_time": "2023-12-03T05:18:37.128296",
+     "duration": 0.01064,
+     "end_time": "2023-12-19T22:31:00.950387",
      "exception": false,
-     "start_time": "2023-12-03T05:18:37.118492",
+     "start_time": "2023-12-19T22:31:00.939747",
      "status": "completed"
     },
     "tags": []
@@ -170,16 +170,16 @@
    "id": "7ebb39be",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-03T05:18:37.135688Z",
-     "iopub.status.busy": "2023-12-03T05:18:37.134964Z",
-     "iopub.status.idle": "2023-12-03T05:18:37.141238Z",
-     "shell.execute_reply": "2023-12-03T05:18:37.140553Z"
+     "iopub.execute_input": "2023-12-19T22:31:00.961400Z",
+     "iopub.status.busy": "2023-12-19T22:31:00.960901Z",
+     "iopub.status.idle": "2023-12-19T22:31:00.965013Z",
+     "shell.execute_reply": "2023-12-19T22:31:00.964534Z"
     },
     "papermill": {
-     "duration": 0.011182,
-     "end_time": "2023-12-03T05:18:37.142422",
+     "duration": 0.011174,
+     "end_time": "2023-12-19T22:31:00.966412",
      "exception": false,
-     "start_time": "2023-12-03T05:18:37.131240",
+     "start_time": "2023-12-19T22:31:00.955238",
      "status": "completed"
     },
     "tags": []
@@ -212,16 +212,16 @@
    "id": "c0ae54cd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-03T05:18:37.150830Z",
-     "iopub.status.busy": "2023-12-03T05:18:37.150270Z",
-     "iopub.status.idle": "2023-12-03T05:18:37.707636Z",
-     "shell.execute_reply": "2023-12-03T05:18:37.706873Z"
+     "iopub.execute_input": "2023-12-19T22:31:00.977220Z",
+     "iopub.status.busy": "2023-12-19T22:31:00.977067Z",
+     "iopub.status.idle": "2023-12-19T22:31:01.322745Z",
+     "shell.execute_reply": "2023-12-19T22:31:01.322154Z"
     },
     "papermill": {
-     "duration": 0.56304,
-     "end_time": "2023-12-03T05:18:37.708917",
+     "duration": 0.352925,
+     "end_time": "2023-12-19T22:31:01.324194",
      "exception": false,
-     "start_time": "2023-12-03T05:18:37.145877",
+     "start_time": "2023-12-19T22:31:00.971269",
      "status": "completed"
     },
     "tags": []
@@ -232,12 +232,12 @@
      "output_type": "stream",
      "text": [
       "region         label     \n",
-      "North America  negative       57\n",
-      "               positive      170\n",
-      "               unlabelled    160\n",
+      "North America  negative       45\n",
+      "               positive      168\n",
+      "               unlabelled    167\n",
       "South America  negative      979\n",
       "               positive      126\n",
-      "               unlabelled    136\n",
+      "               unlabelled    127\n",
       "dtype: int64\n"
      ]
     }
@@ -257,6 +257,17 @@
     ")\n",
     "combined = pd.concat((tmp_downsampled, negatives))\n",
     "cleaned = combined.drop(columns=list(UNUSED_COLUMNS), errors=\"ignore\")\n",
+    "cleaned = cleaned.drop(\n",
+    "    columns=[\n",
+    "        \"sedimentary_bound_water_thickness (m)\",\n",
+    "        \"crustal_pore_water_thickness (m)\",\n",
+    "        \"crustal_bound_water_thickness (m)\",\n",
+    "        \"mantle_lithosphere_water_thickness (m)\",\n",
+    "        \"base_lithosphere_water_thickness (m)\",\n",
+    "        \"total_water_thickness (m)\",\n",
+    "    ],\n",
+    "    errors=\"ignore\",\n",
+    ")\n",
     "del tmp, tmp_downsampled\n",
     "\n",
     "print(combined.groupby([\"region\", \"label\"]).size())\n"
@@ -267,10 +278,10 @@
    "id": "f28e8f39",
    "metadata": {
     "papermill": {
-     "duration": 0.003563,
-     "end_time": "2023-12-03T05:18:37.715994",
+     "duration": 0.004845,
+     "end_time": "2023-12-19T22:31:01.334420",
      "exception": false,
-     "start_time": "2023-12-03T05:18:37.712431",
+     "start_time": "2023-12-19T22:31:01.329575",
      "status": "completed"
     },
     "tags": []
@@ -284,10 +295,10 @@
    "id": "bd63ddf5",
    "metadata": {
     "papermill": {
-     "duration": 0.002945,
-     "end_time": "2023-12-03T05:18:37.722185",
+     "duration": 0.004959,
+     "end_time": "2023-12-19T22:31:01.344443",
      "exception": false,
-     "start_time": "2023-12-03T05:18:37.719240",
+     "start_time": "2023-12-19T22:31:01.339484",
      "status": "completed"
     },
     "tags": []
@@ -302,16 +313,16 @@
    "id": "55d73ca5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-03T05:18:37.729453Z",
-     "iopub.status.busy": "2023-12-03T05:18:37.729133Z",
-     "iopub.status.idle": "2023-12-03T05:18:45.543963Z",
-     "shell.execute_reply": "2023-12-03T05:18:45.543374Z"
+     "iopub.execute_input": "2023-12-19T22:31:01.355929Z",
+     "iopub.status.busy": "2023-12-19T22:31:01.355765Z",
+     "iopub.status.idle": "2023-12-19T22:31:06.066679Z",
+     "shell.execute_reply": "2023-12-19T22:31:06.066070Z"
     },
     "papermill": {
-     "duration": 7.819934,
-     "end_time": "2023-12-03T05:18:45.545294",
+     "duration": 4.718441,
+     "end_time": "2023-12-19T22:31:06.068122",
      "exception": false,
-     "start_time": "2023-12-03T05:18:37.725360",
+     "start_time": "2023-12-19T22:31:01.349681",
      "status": "completed"
     },
     "tags": []
@@ -321,7 +332,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model training time: 0:00:07.807096\n"
+      "Model training time: 0:00:04.703699\n"
      ]
     }
    ],
@@ -358,10 +369,10 @@
    "id": "2b3ccf5f",
    "metadata": {
     "papermill": {
-     "duration": 0.003177,
-     "end_time": "2023-12-03T05:18:45.552069",
+     "duration": 0.006083,
+     "end_time": "2023-12-19T22:31:06.079026",
      "exception": false,
-     "start_time": "2023-12-03T05:18:45.548892",
+     "start_time": "2023-12-19T22:31:06.072943",
      "status": "completed"
     },
     "tags": []
@@ -376,16 +387,16 @@
    "id": "680f093d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-03T05:18:45.559966Z",
-     "iopub.status.busy": "2023-12-03T05:18:45.559684Z",
-     "iopub.status.idle": "2023-12-03T05:18:54.809546Z",
-     "shell.execute_reply": "2023-12-03T05:18:54.808734Z"
+     "iopub.execute_input": "2023-12-19T22:31:06.088694Z",
+     "iopub.status.busy": "2023-12-19T22:31:06.088530Z",
+     "iopub.status.idle": "2023-12-19T22:31:12.665389Z",
+     "shell.execute_reply": "2023-12-19T22:31:12.664922Z"
     },
     "papermill": {
-     "duration": 9.255771,
-     "end_time": "2023-12-03T05:18:54.810849",
+     "duration": 6.583659,
+     "end_time": "2023-12-19T22:31:12.666952",
      "exception": false,
-     "start_time": "2023-12-03T05:18:45.555078",
+     "start_time": "2023-12-19T22:31:06.083293",
      "status": "completed"
     },
     "tags": []
@@ -397,8 +408,8 @@
      "text": [
       "Region: North America\n",
       "label\n",
-      "positive      170\n",
-      "unlabelled    160\n",
+      "positive      168\n",
+      "unlabelled    167\n",
       "dtype: int64\n"
      ]
     },
@@ -406,12 +417,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model training time: 0:00:04.709732\n",
+      "Model training time: 0:00:03.278963\n",
       "\n",
       "Region: South America\n",
       "label\n",
       "positive      126\n",
-      "unlabelled    136\n",
+      "unlabelled    127\n",
       "dtype: int64\n"
      ]
     },
@@ -419,7 +430,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model training time: 0:00:04.509893\n",
+      "Model training time: 0:00:03.275420\n",
       "\n"
      ]
     }
@@ -458,10 +469,10 @@
    "id": "15b4ab2e",
    "metadata": {
     "papermill": {
-     "duration": 0.003137,
-     "end_time": "2023-12-03T05:18:54.817772",
+     "duration": 0.00455,
+     "end_time": "2023-12-19T22:31:12.676664",
      "exception": false,
-     "start_time": "2023-12-03T05:18:54.814635",
+     "start_time": "2023-12-19T22:31:12.672114",
      "status": "completed"
     },
     "tags": []
@@ -475,10 +486,10 @@
    "id": "186b56a9",
    "metadata": {
     "papermill": {
-     "duration": 0.003645,
-     "end_time": "2023-12-03T05:18:54.825064",
+     "duration": 0.004427,
+     "end_time": "2023-12-19T22:31:12.685594",
      "exception": false,
-     "start_time": "2023-12-03T05:18:54.821419",
+     "start_time": "2023-12-19T22:31:12.681167",
      "status": "completed"
     },
     "tags": []
@@ -493,16 +504,16 @@
    "id": "2b4a61e7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-03T05:18:54.833691Z",
-     "iopub.status.busy": "2023-12-03T05:18:54.833425Z",
-     "iopub.status.idle": "2023-12-03T05:18:56.438484Z",
-     "shell.execute_reply": "2023-12-03T05:18:56.437927Z"
+     "iopub.execute_input": "2023-12-19T22:31:12.696003Z",
+     "iopub.status.busy": "2023-12-19T22:31:12.695599Z",
+     "iopub.status.idle": "2023-12-19T22:31:12.981965Z",
+     "shell.execute_reply": "2023-12-19T22:31:12.981514Z"
     },
     "papermill": {
-     "duration": 1.610932,
-     "end_time": "2023-12-03T05:18:56.439675",
+     "duration": 0.292888,
+     "end_time": "2023-12-19T22:31:12.982990",
      "exception": false,
-     "start_time": "2023-12-03T05:18:54.828743",
+     "start_time": "2023-12-19T22:31:12.690102",
      "status": "completed"
     },
     "tags": []
@@ -512,7 +523,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model training time: 0:00:01.597297\n"
+      "Model training time: 0:00:00.278715\n"
      ]
     }
    ],
@@ -545,10 +556,10 @@
    "id": "e1c42b19",
    "metadata": {
     "papermill": {
-     "duration": 0.003611,
-     "end_time": "2023-12-03T05:18:56.447811",
+     "duration": 0.002719,
+     "end_time": "2023-12-19T22:31:12.988966",
      "exception": false,
-     "start_time": "2023-12-03T05:18:56.444200",
+     "start_time": "2023-12-19T22:31:12.986247",
      "status": "completed"
     },
     "tags": []
@@ -563,16 +574,16 @@
    "id": "4de50175",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-03T05:18:56.456661Z",
-     "iopub.status.busy": "2023-12-03T05:18:56.456390Z",
-     "iopub.status.idle": "2023-12-03T05:18:58.304373Z",
-     "shell.execute_reply": "2023-12-03T05:18:58.303822Z"
+     "iopub.execute_input": "2023-12-19T22:31:12.995457Z",
+     "iopub.status.busy": "2023-12-19T22:31:12.995207Z",
+     "iopub.status.idle": "2023-12-19T22:31:13.200039Z",
+     "shell.execute_reply": "2023-12-19T22:31:13.199544Z"
     },
     "papermill": {
-     "duration": 1.853881,
-     "end_time": "2023-12-03T05:18:58.305564",
+     "duration": 0.209367,
+     "end_time": "2023-12-19T22:31:13.201044",
      "exception": false,
-     "start_time": "2023-12-03T05:18:56.451683",
+     "start_time": "2023-12-19T22:31:12.991677",
      "status": "completed"
     },
     "tags": []
@@ -584,10 +595,10 @@
      "text": [
       "Region: North America\n",
       "label\n",
-      "negative     57\n",
-      "positive    170\n",
+      "negative     45\n",
+      "positive    168\n",
       "dtype: int64\n",
-      "Model training time: 0:00:00.079534\n",
+      "Model training time: 0:00:00.053312\n",
       "\n",
       "Region: South America\n",
       "label\n",
@@ -600,7 +611,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model training time: 0:00:01.752583\n",
+      "Model training time: 0:00:00.139014\n",
       "\n"
      ]
     }
@@ -640,10 +651,10 @@
    "id": "f744bcac",
    "metadata": {
     "papermill": {
-     "duration": 0.003529,
-     "end_time": "2023-12-03T05:18:58.313161",
+     "duration": 0.009006,
+     "end_time": "2023-12-19T22:31:13.214174",
      "exception": false,
-     "start_time": "2023-12-03T05:18:58.309632",
+     "start_time": "2023-12-19T22:31:13.205168",
      "status": "completed"
     },
     "tags": []
@@ -672,14 +683,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 27.137425,
-   "end_time": "2023-12-03T05:19:00.934195",
+   "duration": 17.520389,
+   "end_time": "2023-12-19T22:31:15.835875",
    "environment_variables": {},
    "exception": null,
    "input_path": "01-create_classifiers.ipynb",
-   "output_path": "01-create_classifiers.ipynb",
+   "output_path": "01-create_classifiers_output.ipynb",
    "parameters": {},
-   "start_time": "2023-12-03T05:18:33.796770",
+   "start_time": "2023-12-19T22:30:58.315486",
    "version": "2.4.0"
   }
  },
